manifest/objects/SBQQ__Subscription__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__RenewalProductId__c</fullName>
        <description>Exists for convenience of not having to run relationship queries.</description>
        <formula>IF(ISBLANK(SBQQ__Product__r.SBQQ__RenewalProduct__c),SBQQ__Product__c,IF(ISPICKVAL(SBQQ__Product__r.SBQQ__RenewalProduct__r.SBQQ__SubscriptionPricing__c, &apos;&apos;), SBQQ__Product__c, SBQQ__Product__r.SBQQ__RenewalProduct__c))</formula>
        <inlineHelpText>Product ID for the renewal subscription.</inlineHelpText>
        <label>Renewal Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOptionId__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__RenewalProductOption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOptionProductId__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOptionSubscriptionPricing__c</fullName>
        <formula>TEXT(SBQQ__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__r.SBQQ__SubscriptionPricing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Sub Pricing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuantity__c</fullName>
        <description>Quantity of this subscription product that will be renewed.</description>
        <inlineHelpText>Quantity of this subscription product that will be renewed.</inlineHelpText>
        <label>Renewal Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedDate__c</fullName>
        <description>Date this subscription was renewed as determined by date the renewal opportunity was contracted.</description>
        <inlineHelpText>Date this subscription was renewed. Blank means it has not been renewed.</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredById__c</fullName>
        <description>What Id the field is required by.</description>
        <inlineHelpText>What Id the field is required by.</inlineHelpText>
        <label>Required By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredByProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product of this subscription.</description>
        <inlineHelpText>Parent Product of this subscription.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Subscriptions</relationshipLabel>
        <relationshipName>ChildSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the Revised Subscription for this field.</inlineHelpText>
        <label>Revised Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RootId__c</fullName>
        <description>The ID of the subscription or asset at the root of the bundle that contains this subscription</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains this subscription</inlineHelpText>
        <label>Root Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentEndDate__c</fullName>
        <description>For MDQ products, the End Date from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the End Date from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</description>
        <inlineHelpText>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentQuantity__c</fullName>
        <description>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</description>
        <inlineHelpText>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</inlineHelpText>
        <label>Segment Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentStartDate__c</fullName>
        <description>For MDQ products, the Start Date from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Start Date from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentUpliftAmount__c</fullName>
        <description>For MDQ products, the Uplift Amount from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift Amount from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Uplift (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentUplift__c</fullName>
        <description>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Uplift</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SpecialPrice__c</fullName>
        <description>Special Price for this Subscription.</description>
        <inlineHelpText>Special Price for this Subscription.</inlineHelpText>
        <label>Special Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>The first date this subscription is in effect.</description>
        <formula>if ( ISBLANK (SBQQ__SubscriptionStartDate__c), SBQQ__Contract__r.StartDate, SBQQ__SubscriptionStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The first date this subscription is in effect.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionEndDate__c</fullName>
        <description>Matches the quote line end date by default. If blank, it will match the contract end date.</description>
        <inlineHelpText>Matches the quote line end date by default. If blank, it will match the contract end date.</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Method of calculating the subscription price.</description>
        <inlineHelpText>Method of calculating the subscription price.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionStartDate__c</fullName>
        <description>Matches the quote line start date by default. If blank, it will match the contract start date.</description>
        <inlineHelpText>Matches the quote line start date by default. If blank, it will match the contract start date.</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ProductSubscriptionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term. This is useful when you want to show a breakdown of payments in separate groups, for different terms, yet you want to discount reflected for the entire duration of the subscription. Leave Term Discount Level blank if you want discount schedules applied based on the term of each line item.</description>
        <inlineHelpText>Schedule for discounts based on subscription term. Setting this to &quot;Group&quot; applies the discount rate for the group term, while setting it to &quot;Quote&quot; applies the discount rate for the entire quote term, regardless of the different terms in your groups.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Subscriptions (Term Discouned)</relationshipLabel>
        <relationshipName>TermDiscountedSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TerminatedDate__c</fullName>
        <description>Date on which this subscription terminated.</description>
        <inlineHelpText>Date the subscription terminated. Automatically populated when covered asset is upgraded.</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Unit Cost for this Subscription.</description>
        <inlineHelpText>Unit Cost for this Subscription.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>SBQQ__Product__r.SBQQ__SortOrder__c</formula>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <description>** Back End only ** Do not add to page layouts</description>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Active</fullName>
                    <default>true</default>
                    <label>Not Yet Active</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Termination date for subscription</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Partner__c</fullName>
        <label>Vendor Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vendor_Partner</valueSetName>
        </valueSet>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>Current_Membership_Fee__c</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>SBQQ__Bundled__c</columns>
        <columns>Fee_Type_Formula__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Miissing_Fee_Type</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Oportunity_Id__c</columns>
        <columns>Fee_Type_Formula__c</columns>
        <columns>SBQQ__ProductName__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fee_Type__c</field>
            <operation>equals</operation>
        </filters>
        <label>Missing Fee Type</label>
    </listViews>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__ContractNumber__c</columns>
        <columns>SBQQ__QuoteLine__c</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>SBQQ__SubscriptionStartDate__c</columns>
        <columns>SBQQ__StartDate__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUB-{0000000}</displayFormat>
        <label>Subscription #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Subscription_Creation</fullName>
        <active>true</active>
        <description>Rule to prevent users to not have the ability to create new Subscriptions other than System Administrator.</description>
        <errorConditionFormula>AND(
ISNEW(),
$Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorMessage>Your assigned Profile does not allow for creating new Subscriptions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Subscription_Update</fullName>
        <active>true</active>
        <description>Rule to prevent users to not have the ability to update Subscriptions other than System Administrator.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
$Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorMessage>Your assigned Profile does not allow for updating Subscriptions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Renewal_Quantity_cannot_be_editable</fullName>
        <active>true</active>
        <description>Renewal Quantity cannot be editable.</description>
        <errorConditionFormula>if ( (SBQQ__Contract__r.SBQQ__PreserveBundleStructureUponRenewals__c == true &amp;&amp; SBQQ__RenewalQuantity__c != SBQQ__Quantity__c &amp;&amp; ISCHANGED(SBQQ__RenewalQuantity__c)), true, false)</errorConditionFormula>
        <errorMessage>Preserve Bundle Structure is checked on Contract, Renewal Quantity cannot be different from Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_and_product_end_date_check</fullName>
        <active>true</active>
        <description>Can not leave end date blank if status is term</description>
        <errorConditionFormula>AND(ISPICKVAL( Status__c , &apos;Terminated&apos;),
OR ( Termination_Date__c&gt; Today(), 
     ISBLANK(Termination_Date__c)))</errorConditionFormula>
        <errorMessage>Status can not be Terminated if Termination Date date field is empty or in the future.</errorMessage>
    </validationRules>
</CustomObject>